# Fawry-Internship

./: CMakeLists.txt  README.md
Product_Types/Shippable/: ShippableProduct.cpp  ShippableProduct.h
Task1/: README.md
Task1/Product_Types/Expiring/: ExpiringProduct.cpp  ExpiringProduct.h
Task1/Product_Types/Shippable_and_Expiring/: ShippableExpiringProduct.cpp  ShippableExpiringProduct.h
Task1/core/Customer/: Customer.cpp
Task1/core/Product/: Product.cpp  Product.h
Task1/main/: main.cpp
Task2/: README.md
Task2/Book/: Book.cpp  Book.h
Task2/Book_Types/DemoBook/: demo.cpp  demo.h
Task2/Book_Types/EBook/: EBook.cpp  EBook.h
Task2/Book_Types/PaperBook/: PaperBook.cpp  PaperBook.h
Task2/Services/: MailService.h  ShippingService.h
Task2/Store/: inventory.cpp  inventory.h
Task2/Test/: QuantumBookstoreFullTest.cpp  QuantumBookstoreFullTest.h
Task2/main/: main.cpp
core/Customer/: Customer.h
core/Shipping/: ShippingService.cpp  ShippingService.h
main/: main.cpp
